file(GLOB MAIN_WT CONFIGURE_DEPENDS
  "../app_init.cpp"
  "../app_init.h"
  "main.cpp"
)
list(REMOVE_ITEM SOURCES_WT ${MAIN_WT})

list(FILTER SOURCES EXCLUDE REGEX "/graph/")
list(FILTER UNITTESTS EXCLUDE REGEX "/graph/")
list(FILTER SOURCES EXCLUDE REGEX "/modus/")
list(FILTER SOURCES EXCLUDE REGEX "/vidicon/")
list(FILTER SOURCES EXCLUDE REGEX "/web/")

# Lib
#
# `client_application.cpp` and `startup_exception.cpp` live here (rather than
# in `MAIN_WT`) so the test executable can pull them in through the lib,
# avoiding a second copy of the heavy `client_application.cpp` compilation.

add_library(client_wt_lib
  ${SOURCES}
  ${SOURCES_WT}
  "../client_application.cpp"
  "../client_application.h"
  "../client_application_modules.cpp"
  "../client_application_modules.h"
  "../opcua_services_module.cpp"
  "../opcua_services_module.h"
  "../startup_exception.cpp"
  "../startup_exception.h"
)
target_precompile_headers(client_wt_lib REUSE_FROM scada_base)

find_package(wt REQUIRED)
target_link_libraries(client_wt_lib PUBLIC
  aui_wt
  client_common
  client_configuration_wt
  client_controller_wt
  client_events_wt
  client_export_configuration_wt
  client_export_csv_wt
  client_favorites_wt
  client_filesystem_wt
  client_main_window_wt
  client_portfolio_wt
  client_profile_wt
  client_properties_wt
  client_services_wt
  client_ui_progress_wt
  ${CLIENT_WT_COMPONENT_TARGETS}
  scada_core_opcua
)

target_compile_options(client_wt_lib PUBLIC
  /wd4251
  /wd4275
)

# Exe

add_executable(client_wt ${MAIN_WT})
target_precompile_headers(client_wt REUSE_FROM scada_base)

if(MSVC)
  target_link_options(client_wt PRIVATE
    "$<$<CONFIG:RelWithDebInfo>:/PDB:NONE>"
  )
endif()

target_link_libraries(client_wt PUBLIC
  Wt::HTTP
)

target_link_libraries(client_wt PUBLIC client_wt_lib)

set_property(TARGET client_wt PROPERTY OUTPUT_NAME "webserver")

# `client_wt_unittests` (a monolithic integration test target paralleling
# `client_qt_unittests`) used to wrap the six `startup_exception`
# test cases. Those now live in the platform-neutral
# `client_startup_exception_tests` target declared in the parent
# `CMakeLists.txt`, so there is no longer a test body that needs the full
# `client_wt_lib` link. Module-scoped tests continue to run from each
# module's `client_<module>_wt_unittests` target (generated by
# `client_module()` when a module has `*_unittest.cpp` files).
