client_component_module(client_component_table)

target_link_libraries(client_component_table_qt PRIVATE
  client_ui_common_qt
)
target_link_libraries(client_component_table_wt PRIVATE
  client_ui_common_wt
)

target_link_libraries(client_component_table_qt_unittests PRIVATE
  scada_common
)
target_link_libraries(client_component_table_wt_unittests PRIVATE
  scada_common
)
